Closed Bug 16246 Opened 26 years ago Closed 26 years ago

File op: Attempting to move file with fileMove results in crash

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P3)

All
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jimmykenlee, Assigned: ssu0262)

Details

Build: 10/12/99 SeaMonkey build 1. From http://jimbob/trigger2.html, trigger http://jimbob/jars/a_fileop_filemove.xpi startInstall("Acceptance: a_fileop_filemove", "acceptance", "1.1.1.1", 0); f = getFolder("Program"); g = getFolder("Temporary", "filemove"); addFile("fileop_filemove", "2.2.2.2", jarSrc, f, jarSrc, true); fileSource = f + jarSrc; fileTarget = g; err1 = fileMove(fileSource, fileTarget); logComment("Path to fileSource = " + fileSource); logComment("Path to fileTarget = " + fileTarget); logComment("fileMove returns = " + err1); RESULT: After clicking OK button from XPInstall confirmation dialog, the status dialog appears briefly showing the selected xpi file from the text field. Then the crash occurs. The Install.log contains no information about this session. TalkBack Incident ID = 14218422 Call Stack: (Signature = DeleteEntry 59fac356) DeleteEntry [d:\builds\seamonkey\mozilla\xpinstall\src\nsInstall.cpp, line 2063] _hashEnumerate [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp, line 86] PL_HashTableEnumerateEntries [plhash.c, line 369] nsHashtable::Enumerate [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp, line 215] 0x004c1640 EXPECTED RESULT: Install script installs file, and file is moved as instructed.
Assignee: cathleen → ssu
Target Milestone: M11
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
it no longer crashes, and should return an error value instead.
Status: RESOLVED → VERIFIED
Build 1999-10-18-09-M11(WIN), 1999-10-18-12-M11(MAC), 1999-10-18-08-M11(LINUX) No crash. Behaves as expected.
Bulk move of XPInstall (component to be deleted) bugs to Installer: XPInstall Engine
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.