fixes bug #16246, #16312, #16344, #16308. r=dbragg@netscape.com.  fixes crash bug if the install file operation fails.  no longer crashes.